# rst2md

./: .pre-commit-config.yaml  README.rst  pyproject.toml  rst2md.py  tox.ini
